feat: user dto's
